Corrections of code

--- a/age1SOM.ipynb
+++ b/age1SOM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMg62t31pBppX8Pfkfxv6wt",
+      "authorship_tag": "ABX9TyPLhBwe/gY5TWtg6stTqQh6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,22 +312,14 @@
         "    scale_factor = (density_matrix - min_p) / (mean_p - min_p)\n",
         "u_star_matrix = u_matrix * scale_factor\n",
         "\n",
-        "#Plotting of the neurons based on the party with the most party vote share in the neuron\n",
-        "# party_counts = (normalized_df\n",
-        "#                 .pivot_table(index=['Neuron Row', 'Neuron Col'],\n",
-        "#                 columns = 'Winning Party',\n",
-        "#                 values = 'Winning Vote Share',\n",
-        "#                 aggfunc = 'sum',\n",
-        "#                 fill_value=0))\n",
         "\n",
-        "#Plotting of the neurons based on the party with the most constitueny count\n",
         "party_counts = (normalized_df\n",
         "                .groupby(['Neuron Row', 'Neuron Col', 'Winning Party'])\n",
         "                .size()\n",
         "                .unstack(fill_value=0))\n",
         "\n",
-        "dominant = party_counts.idxmax(axis=1)                # party with most seats\n",
-        "share    = party_counts.max(axis=1) / party_counts.sum(1)  # its proportion\n",
+        "dominant = party_counts.idxmax(axis=1) #the party with the most seats\n",
+        "share    = party_counts.max(axis=1) / party_counts.sum(1)  # The proportion of the votes\n",
         "\n",
         "labels_df = pd.concat([dominant.rename('major_party'),\n",
         "                       share.rename('purity')], axis=1)\n",
@@ -342,10 +334,10 @@
         "for (r, c), party in dominant.items():\n",
         "    if party in party_colors:\n",
         "        base_color = np.array(party_colors[party])\n",
-        "        plt.scatter(c,#neuron_row #+ 0.3 * np.random.rand(),\n",
-        "                    r,# neuron_col, #+ 0.3 * np.random.rand(),\n",
+        "        plt.scatter(c,\n",
+        "                    r,\n",
         "                    s=200*share.loc[(r,c)],\n",
-        "                    color= base_color,#adjusted_color,\n",
+        "                    color= base_color,\n",
         "                    alpha=0.7, edgecolors='k',)\n",
         "\n",
         "# Add legend\n",
@@ -369,8 +361,7 @@
         "\n",
         "    # for index, row in normalized_df.iterrows():\n",
         "    for (r, c), party in dominant.items():\n",
-        "        # neuron_row, neuron_col = row['Neuron Row'], row['Neuron Col']\n",
-        "        # winning_party = row['Winning Party']\n",
+        "\n",
         "        colour = np.array(party_colors[party])\n",
         "        if party in party_colors:\n",
         "          plt.scatter(c, r, color=colour, marker='o', s=50)\n",
@@ -386,7 +377,7 @@
         "        neuron_constituency_map[neuron] = []\n",
         "    neuron_constituency_map[neuron].append(constituency)\n",
         "\n",
-        "# Print the constituencies mapped to each neuron (optional)\n",
+        "# Print the constituencies mapped to each neuron\n",
         "for neuron, constituencies in neuron_constituency_map.items():\n",
         "    print(f\"Neuron {neuron}: {constituencies}\")\n",
         "\n",
