Corrections of code

--- a/1stSOM.ipynb
+++ b/1stSOM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ8FQrTeBqMGlSl6d3dVrn",
+      "authorship_tag": "ABX9TyObXV50j/9mC1bf1Xas/ScA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,8 +334,8 @@
         "                .size()\n",
         "                .unstack(fill_value=0))\n",
         "\n",
-        "dominant = party_counts.idxmax(axis=1)                # party with most seats\n",
-        "share    = party_counts.max(axis=1) / party_counts.sum(1)  # its proportion\n",
+        "dominant = party_counts.idxmax(axis=1)\n",
+        "share    = party_counts.max(axis=1) / party_counts.sum(1)\n",
         "\n",
         "\n",
         "labels_df = pd.concat([dominant.rename('major_party'),\n",
@@ -354,10 +354,10 @@
         "\n",
         "    if party in party_colors:\n",
         "        base_color = np.array(party_colors[party])\n",
-        "        plt.scatter(c,#neuron_row #+ 0.3 * np.random.rand(),\n",
-        "                    r,# neuron_col, #+ 0.3 * np.random.rand(),\n",
+        "        plt.scatter(c,\n",
+        "                    r,\n",
         "                    s=200*share.loc[(r,c)],\n",
-        "                    color= base_color,#adjusted_color,\n",
+        "                    color= base_color,\n",
         "                    alpha=0.7, edgecolors='k',)\n",
         "\n",
         "\n",
@@ -369,38 +369,6 @@
         "plt.ylabel(\"Neuron Row\")\n",
         "plt.show()\n",
         "\n",
-        "\n",
-        "\n",
-        "# 1. Feature Plane Visualization for Education Levels\n",
-        "\n",
-        "# education_features = [\n",
-        "#     \"Level 1 and entry level qualifications: 1 to 4 GCSEs grade A* to C, Any GCSEs at other grades, O levels or CSEs (any grades), 1 AS level, NVQ level 1, Foundation GNVQ, Basic or Essential Skills\",\n",
-        "#     \"Level 2 qualifications: 5 or more GCSEs (A* to C or 9 to 4), O levels (passes), CSEs (grade 1), School Certification, 1 A level, 2 to 3 AS levels, VCEs, Intermediate or Higher Diploma, Welsh Baccalaureate Intermediate Diploma, NVQ level 2, Intermediate GNVQ, City and Guilds Craft, BTEC First or General Diploma, RSA Diploma\",\n",
-        "#     \"Level 3 qualifications: 2 or more A levels or VCEs, 4 or more AS levels, Higher School Certificate, Progression or Advanced Diploma, Welsh Baccalaureate Advance Diploma, NVQ level 3; Advanced GNVQ, City and Guilds Advanced Craft, ONC, OND, BTEC National, RSA Advanced Diploma\",\n",
-        "#     \"Level 4 qualifications or above: degree (BA, BSc), higher degree (MA, PhD, PGCE), NVQ level 4 to 5, HNC, HND, RSA Higher Diploma, BTEC Higher level, professional qualifications (for example, teaching, nursing, accountancy)\",\n",
-        "#     \"No qualifications\"\n",
-        "# ]\n",
-        "\n",
-        "# # 2. Combining with Winning Party Colors\n",
-        "\n",
-        "# for feature_name in education_features:\n",
-        "#     feature_index = features.columns.get_loc(feature_name)\n",
-        "#     feature_plane = som.get_weights()[:, :, feature_index]\n",
-        "\n",
-        "#     plt.figure(figsize=(8, 6))\n",
-        "#     plt.imshow(feature_plane, cmap='Greys', origin='lower', alpha=0.7)\n",
-        "#     plt.colorbar(label=feature_name)\n",
-        "#     plt.title(f\"Feature Plane for {feature_name} with Winning Parties\")\n",
-        "#     plt.xlabel(\"Neuron Column\")\n",
-        "#     plt.ylabel(\"Neuron Row\")\n",
-        "\n",
-        "#     for index, row in normalized_df.iterrows():\n",
-        "#         neuron_row, neuron_col = row['Neuron Row'], row['Neuron Col']\n",
-        "#         winning_party = row['Winning Party']\n",
-        "#         if winning_party in party_colors:\n",
-        "#           plt.scatter(neuron_col , neuron_row, color=party_colors.get(winning_party, 'gray'), marker='o', s=20)\n",
-        "\n",
-        "#     plt.show()\n",
         "\n",
         "\n",
         "\n",
@@ -418,8 +386,7 @@
         "\n",
         "    # for index, row in normalized_df.iterrows():\n",
         "    for (r, c), party in dominant.items():\n",
-        "        # neuron_row, neuron_col = row['Neuron Row'], row['Neuron Col']\n",
-        "        # winning_party = row['Winning Party']\n",
+        "\n",
         "        colour = np.array(party_colors[party])\n",
         "        if party in party_colors:\n",
         "          plt.scatter(c, r, color=colour, marker='o', s=20)\n",
